Added user toke functionallity

--- a/src/MyBeers.Api/MyBeers.Api/appsettings.json
+++ b/src/MyBeers.Api/MyBeers.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "MongoSettings": {
+    "DatabaseName": "",
+    "BeerCollection": "",
+    "UserCollection": "",
+    "ConnectionString": ""
+  },
+  "AppSettings": {
+    "Secret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
