Changed structure of database, added rating

--- a/src/MyBeers.Api/appsettings.json
+++ b/src/MyBeers.Api/appsettings.json
@@ -3,6 +3,7 @@
     "DatabaseName": "",
     "BeerCollection": "",
     "UserCollection": "",
+    "RatingCollection":  "",
     "ConnectionString": ""
   },
   "AppSettings": {
