--- a/src/MyBeers.Api/appsettings.json
+++ b/src/MyBeers.Api/appsettings.json
@@ -7,7 +7,8 @@
     "ConnectionString": ""
   },
   "AppSettings": {
-    "Secret": ""
+    "Secret": "",
+    "BlobStorage": ""
   },
   "Logging": {
     "LogLevel": {
