Reverting bad choice

--- a/src/MyBeers.Api/appsettings.json
+++ b/src/MyBeers.Api/appsettings.json
@@ -7,8 +7,7 @@
     "ConnectionString": ""
   },
   "AppSettings": {
-    "Secret": "",
-    "BlobStorage": ""
+    "Secret": ""
   },
   "Logging": {
     "LogLevel": {
