Might be working now. AWSS3

--- a/src/MyBeers.Api/appsettings.json
+++ b/src/MyBeers.Api/appsettings.json
@@ -3,11 +3,18 @@
     "DatabaseName": "",
     "BeerCollection": "",
     "UserCollection": "",
-    "RatingCollection":  "",
+    "RatingCollection": "",
     "ConnectionString": ""
   },
   "AppSettings": {
-    "Secret": ""
+    "Secret": "",
+    "AWSAccessKey": "",
+    "AWSSecretKey": ""
+  },
+  "AWSOptions": {
+    "Profile": "stage",
+    "Region": "eu-north-1",
+    "ProfilesLocation": "C:/credentials"
   },
   "Logging": {
     "LogLevel": {
