--- a/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
+++ b/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
@@ -5,15 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CommandHandlers\**" />
+    <Compile Remove="Commands\**" />
+    <EmbeddedResource Remove="CommandHandlers\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <None Remove="CommandHandlers\**" />
+    <None Remove="Commands\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyBeers.BeerLib.Api\MyBeers.BeerLib.Api.csproj" />
     <ProjectReference Include="..\MyBeers.Common\MyBeers.Common.csproj" />
     <ProjectReference Include="..\MyBeers.RatingLib.Api\MyBeers.RatingLib.Api.csproj" />
     <ProjectReference Include="..\MyBeers.Utilities\MyBeers.Utilities.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="CommandHandlers\" />
   </ItemGroup>
 
   <ItemGroup>
