--- a/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
+++ b/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CommandHandlers\**" />
     <Compile Remove="Commands\**" />
-    <EmbeddedResource Remove="CommandHandlers\**" />
     <EmbeddedResource Remove="Commands\**" />
-    <None Remove="CommandHandlers\**" />
     <None Remove="Commands\**" />
   </ItemGroup>
 
@@ -24,6 +21,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="AWSSDK.S3" Version="3.5.0-beta" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.16.0" />
   </ItemGroup>
 
 </Project>
