--- a/src/MyBeers.Api/MyBeers.Api.csproj
+++ b/src/MyBeers.Api/MyBeers.Api.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\MyBeers.Utilities\MyBeers.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
