--- a/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
+++ b/src/MyBeers.BeerLib/MyBeers.BeerLib.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\MyBeers.Common\MyBeers.Common.csproj" />
     <ProjectReference Include="..\MyBeers.ListLib.Api\MyBeers.ListLib.Api.csproj" />
     <ProjectReference Include="..\MyBeers.RatingLib.Api\MyBeers.RatingLib.Api.csproj" />
+    <ProjectReference Include="..\MyBeers.UserLib.Api\MyBeers.UserLib.Api.csproj" />
     <ProjectReference Include="..\MyBeers.Utilities\MyBeers.Utilities.csproj" />
   </ItemGroup>
 
